# docs/swagger.yaml
@@ -25,6 +25,8 @@ definitions:
         items:
           $ref: '#/definitions/internal.ContentItem'
         type: array
+      project_id:
+        type: integer
       title:
         type: string
       type:
@@ -41,6 +43,8 @@ definitions:
       content_type:
         type: string
       id:
+        type: integer
+      user_id:
         type: integer
     type: object
   internal.Permission:
@@ -60,6 +64,8 @@ definitions:
     type: object
   internal.Project:
     properties:
+      creator_id:
+        type: integer
       description:
         type: string
       id:
@@ -71,6 +77,10 @@ definitions:
     properties:
       email:
         type: string
+      groups:
+        items:
+          type: string
+        type: array
       id:
         type: integer
       username:
@@ -233,7 +243,13 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieve list of content lists
+      description: Retrieve list of content lists for a project
+      parameters:
+      - description: Project ID
+        in: query
+        name: projectid
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
